<resources>
    <string name="app_name">恋恋SDK</string>
    <string name="sdk_string_net_not_address">请检查网络状态</string>
    <string name="sdk_string_net_error">[网络异常]</string>
    <string name="sdk_input_token">请输入恋恋Token值</string>
    <string name="sdk_input_user_id">请输入恋恋UserId值</string>
    <string name="sdk_string_auth_failed">授权失败</string>
    <string name="sdk_string_auth_cancel">授权取消</string>
    <string name="sdk_string_need_register">未注册</string>
    <string name="sdk_btn_login">登录</string>
    <string name="sdk_title_login">登录SDK</string>
    <string name="sdk_string_clear_cache">清理缓存</string>
</resources>